@@ -11,3 +11,4 @@ cryptSuccess=Cryptage réussi !
 dcryptFailled=Décryptage échoué, erreur inconnue !
 dcryptFailledPassword=Décryptage échoué ! Mot de passe incorect !
 dcryptSuccess=Décryptage réussi !
+passwordDialogEnterPrivateKey=Entrez votre clé privée :
