@@ -1,3 +1,7 @@
+2007-03-05  Achraf cherti
+	* new function getPrivateKeyPassword() (with i18n support), to replace
+	  the generic function getPassword(question, save_password)
+
 2007-03-04  Achraf cherti
 	* the default private key is saved and selected by default when
 	  the options dialog is loaded.
